# SiT

./: .gitignore  compare_inference.py  download_imagenet_images.sh  download_models.sh  eval_common.py  eval_incremental_spec.py  eval_mssim.py  eval_spec_baseline.py  eval_spec_euler.py  eval_spec_spec_traj.py  eval_spec_two_picard_grid.py  eval_spec_two_picard_iterations.py  eval_spec_two_picard_time.py  evaluate_flux.py  flux_client.py  flux_runner.py  inference.py  main.py  models.py  plot_spec.py  plotting_code.py  pyproject.toml  run_experiments.py  run_spec.py  train_distill.py  train_distill_consistency.py
